--- a/vignettes/Chemical.Rmd
+++ b/vignettes/Chemical.Rmd
@@ -245,7 +245,7 @@ chemicals_in_ccl4_start <- get_chemicals_in_list_start(list_name = 'CCL4', word 
 `get_chemicals_in_list_exact()` retrieves a list of DTXSIDs matching exactly a given character string in a specified list of chemicals.
 
 ```{r ctxR chemicals-in-list-exact, message=FALSE, eval=FALSE}
-chemicals_in_ccl4_exact <- get_chemicals_in_list_exact(list_name = 'CCL4', word = 'Bisphenol A')
+chemicals_in_ccl4_exact <- get_chemicals_in_list_exact(list_name = 'BIOSOLIDS2021', word = 'Bisphenol A')
 ```
 
 ## DTXSIDs for chemical list and containing value
@@ -288,12 +288,16 @@ chemical_mol_by_dtxcid <- get_chemical_mol(DTXCID = 'DTXCID30182')
 
 ## Get structure image by DTXSID, DTXCID, or SMILES
 
-`get_chemical_image()` retrieves image file information for a chemical specified either by DTXSID or DTXCID.
+`get_chemical_image()` retrieves image file information for a chemical specified either by DTXSID or DTXCID. To visualize the returned array of image information, the user may use either the `png::writePNG()` or `countcolors::plotArrayAsImage()` functions, among many choices.
 
 ```{r ctxR image by dtxsid dtxcid chemical, message=FALSE, eval=FALSE}
 chemical_image_by_dtxsid <- get_chemical_image(DTXSID = 'DTXSID7020182')
 chemical_image_by_dtxcid <- get_chemical_image(DTXCID = 'DTXCID30182')
 chemical_image_by_smiles <- get_chemical_image(SMILES = 'CC(C)(C1=CC=C(O)C=C1)C1=CC=C(O)C=C1')
+
+countcolors::plotArrayAsImage(chemical_image_by_dtxsid)
+countcolors::plotArrayAsImage(chemical_image_by_dtxcid)
+countcolors::plotArrayAsImage(chemical_image_by_smiles)
 ```
 
 # Chemical Synonym Resource
